# analisis_opinion_redes

./: .env.example  .gitignore  AGENTS.md  BITACORA.md  README.md  index.html  pyproject.toml
.github/workflows/: update-dashboard.yml
docs/: 404.html  SECUENCIA_PROMPTS_ANALISIS_OPINION_REDES_2026-06-18.md  actualizar_datos.md  dashboard.js  diccionario_datos.md  importar_exportados.md  index.html  manual_tecnico.md  setup_google.md  setup_meta.md  site.css  status.json
docs/docs/: index.html
samples/: exported_comments_sample.csv  facebook_comments_sample.json
src/analisis_opinion_redes/: __init__.py  analyzer.py  cli.py  config.py  dashboard_export.py  drive_writer.py  file_importer.py  meta_client.py  models.py  pipeline.py  sheet_schema.py  sheets_writer.py
tests/: test_analyzer.py  test_file_importer.py
